# CSCI5801

Project1/: CMakeLists.txt  Doxyfile  Makefile  README.md  buglist.xlsx
Project1/documentation/html/: AuditFile_8h.html  AuditFile_8h__dep__incl.map  AuditFile_8h__dep__incl.md5  AuditFile_8h__incl.map  AuditFile_8h__incl.md5  AuditFile_8h_source.html  Ballot_8h.html  Ballot_8h__dep__incl.map  Ballot_8h__dep__incl.md5  Ballot_8h__incl.map  Ballot_8h__incl.md5  Ballot_8h_source.html  CPLProcessing_8cpp.html  CPLProcessing_8cpp__incl.map  CPLProcessing_8cpp__incl.md5  CPLProcessing_8h.html  CPLProcessing_8h__dep__incl.map  CPLProcessing_8h__dep__incl.md5  CPLProcessing_8h__incl.map  CPLProcessing_8h__incl.md5  CPLProcessing_8h_source.html  CPLVoteBallot_8cpp.html  CPLVoteBallot_8cpp__incl.map  CPLVoteBallot_8cpp__incl.md5  CPLVoteBallot_8h.html  CPLVoteBallot_8h__dep__incl.map  CPLVoteBallot_8h__dep__incl.md5  CPLVoteBallot_8h__incl.map  CPLVoteBallot_8h__incl.md5  CPLVoteBallot_8h_source.html  CPLVoteSystem_8cpp.html  CPLVoteSystem_8cpp__incl.map  CPLVoteSystem_8cpp__incl.md5  CPLVoteSystem_8h.html  CPLVoteSystem_8h__dep__incl.map  CPLVoteSystem_8h__dep__incl.md5  CPLVoteSystem_8h__incl.map  CPLVoteSystem_8h__incl.md5  CPLVoteSystem_8h_source.html  Candidate_8h_source.html  (+353 more)
Project1/documentation/latex/: AuditFile_8h.tex  AuditFile_8h__dep__incl.md5  AuditFile_8h__incl.md5  Ballot_8h.tex  Ballot_8h__dep__incl.md5  Ballot_8h__incl.md5  CPLProcessing_8cpp.tex  CPLProcessing_8cpp__incl.md5  CPLProcessing_8h.tex  CPLProcessing_8h__dep__incl.md5  CPLProcessing_8h__incl.md5  CPLVoteBallot_8cpp.tex  CPLVoteBallot_8cpp__incl.md5  CPLVoteBallot_8h.tex  CPLVoteBallot_8h__dep__incl.md5  CPLVoteBallot_8h__incl.md5  CPLVoteSystem_8cpp.tex  CPLVoteSystem_8cpp__incl.md5  CPLVoteSystem_8h.tex  CPLVoteSystem_8h__dep__incl.md5  CPLVoteSystem_8h__incl.md5  Display_8h.tex  Display_8h__dep__incl.md5  Display_8h__incl.md5  IBallotProcessing_8h.tex  (+138 more)
Project1/product_backlogs/: FinalProductBacklog.docx  InitialProductBacklog.docx
Project1/src/: AuditFile.cpp  Ballot.cpp  CPLLottery.cpp  CPLProcessing.cpp  CPLVoteBallot.cpp  CPLVoteSystem.cpp  Candidate.cpp  Display.cpp  IRBallot.cpp  IRCandidate.cpp  IRProcessing.cpp  IRVoteSystem.cpp  Party.cpp  PoBallot.cpp  PoProcessing.cpp  PoVoteSystem.cpp  PopularityCase.cpp  TableBuilder.cpp  TieBreaker.cpp  main.cpp
Project1/testing/: testinglogs.docx
(+123 files in other folders)
